feat/#8 Add the functionality to clone the Github repository specified by the GitHub POST request. fixes #8

--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
             <artifactId>annotations</artifactId>
             <version>18.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>5.6.0.201912101111-r</version>
+        </dependency>
     </dependencies>
 </project>
