--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,10 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.6.0.201912101111-r</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 </project>
