--- a/pom.xml
+++ b/pom.xml
@@ -71,5 +71,10 @@
             <artifactId>maven-invoker</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.714</version>
+        </dependency>
     </dependencies>
 </project>
