--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ hs_err_pid*
 .idea
 assignment-2.iml
 
-#Eclipse auto-generated files
+# Eclipse auto-generated files
 .classpath
 .project
 *.prefs
@@ -36,3 +36,8 @@ target
 git
 reports
 log
+
+# HTML generator test files
+results.txt
+results.html
+TestHTMLGenerator.java
