--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupp-22</groupId>
+    <groupId>org.groupp22</groupId>
     <artifactId>assignment-2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -15,7 +15,7 @@
     </properties>
 
     <build>
-        <finalName>ci-server</finalName>
+        <finalName>org.ci-org.group22.server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -36,7 +36,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>App</mainClass>
+                            <mainClass>org.group22.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
