--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: '3.4'
 services:
   ci-server:
-    image: org.groupp22.ci-org.groupp22.server:latest
-    container_name: org.groupp22.ci-org.groupp22.server
+    image: ci-server:latest
+    container_name: ci-server
     ports:
       - 7070:8080
     environment:
       - AWS_SECRET_KEY
       - AWS_ACCESS_KEY_ID
       - GITHUB_TOKEN
-      - M3_HOME
