Fix Docker file (#29)
* feat/#23 Add configuration for deployment to ECS

* refactor/#25 Change to using the maven-shade-plugin for packaging the final jar file, the build time is now 30s locally instead of 65s.

Update the Dockerfile to reflect the changes.

Move the main method from the ContinuousIntegrationServer class to a separate App class in the source folder.

* fix/#23 Update Docker file

* Update Docker and pom files

* Chang project structure

* Working

* fix/#31 Fix Dockerfile and configuration of the mega jar

* Add DS_Store to gitignore

fixes #29 

fixes #31

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupp-22</groupId>
+    <groupId>org.groupp22</groupId>
     <artifactId>assignment-2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +15,7 @@
     </properties>
 
     <build>
-        <finalName>ci-server</finalName>
+        <finalName>org.ci-org.group22.server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -29,22 +29,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.1</version>
                 <executions>
-                    <!-- Run shade goal on package phase -->
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <transformers>
-                                <!-- add Main-Class to manifest file -->
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>App</mainClass>
-                                </transformer>
-                            </transformers>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -55,6 +47,14 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.group22.App</mainClass>
+                                </transformer>
+                            </transformers>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>launcher</shadedClassifierName>
                         </configuration>
                     </execution>
                 </executions>
