Implement html generator (#53)
* feat/#16 File parser code skeleton

Add the code skeleton for the parser function that will be used for parsing the results from a txt file to a html file.

* feat/#16 Basic result extraction

Add the basic functionality of extracting the results of the tests found in the txt file given as input to the text to html parser function.

Also updates the .gitignore to include files used for testing the parser.

* feat/#16 HTML and CSS files

Add the first iteration of the HTML and CSS files that will be used as the base for the HTML generated for the results.

The HTML template file have specific values marked with brackets that will be changed when generating a new HTML file for the results.

* feat/fix/#16 Basic parsing functionality

Add basic parsing functionality wherein if a txt file is fed into the parser it will write a html file based on the results found in the txt file.

Also fixes a small bug regarding placement of variables in the parsing function.

* feat/#16 Basic graphical display

Add basic grapical that shows how many tests were run and how many of them were failed, ran into an error or skipped.

* feat/#16 Upload html file

The parser now also tries to upload the file.

* feat/#16 Add function for uploading HTML report to AWS S3, change how functions are called in ProjectTester and refactored the txtToHTMLFile function.

* refactor/#16 Removed unused variables

* refactor/#16 Fix log messages

* fix/#16 Fix formatting

* refactor/#16 Refactor of the txtToHTMLFile function, split into separate functions to lower complexity

* refactor/#16 Add getters for the Result class

Co-authored-by: Erik <erik.r.svensson@telia.com>

fixes #16

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ hs_err_pid*
 .idea
 assignment-2.iml
 
-#Eclipse auto-generated files
+# Eclipse auto-generated files
 .classpath
 .project
 .settings
@@ -39,3 +39,8 @@ reports
 log
 
 .DS_Store
+
+# HTML generator test files
+results.txt
+results.html
+TestHTMLGenerator.java
