--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,8 @@ log4j.appender.stdout.Threshold=info
 log4j.appender.FILE.Threshold=info
 log4j.appender.FILE.File=log/log.out
 log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.stdout.ImmediateFlush=true
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%m%n
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=%m%n
 log4j.appender.stdout.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
